correct masthead center align somehow it went to left ?

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,6 +5,7 @@
    .masthead {
     position: sticky;
     top: 0;
+    text-align: center;
     border-bottom: 1px solid $border-color;
     -webkit-animation: intro 0.3s both;
             animation: intro 0.3s both;
